--- a/sunglasses.html
+++ b/sunglasses.html
@@ -22,14 +22,21 @@
 
     <ul class="serise-bar">
             <li><a href="#">OPTICAL</a></li>
-            <li><a href="./sunglasses.html">SUNGLASSES</a></li>
+            <li class="sunglasses"><a href="./sunglasses.html">SUNGLASSES</a></li>
             <li><a href="#">FUNCTIONAL</a></li>
         </ul>
     </div>
 
     <div class="serise-bn">
-        <div class="img-1"><img src="./image/product-header-3.png" alt="product-header-3"></div>
-        <div class="img-2"><img src="./image/product-header-4.png" alt="product-header-4"></div>
+        <picture>
+            <source srcset="./image/product-header-3.png" >
+            <img src="./image/product-header-3.png">
+        </picture>
+        <picture>
+            <source srcset="./image/product-header-4.png " media="(max-width:992px)">
+            <img src="./image/product-header-4.png">
+        </picture>
+ 
     </div>
 
     <div class="content">
@@ -42,7 +49,7 @@
                 <li class="card">
                     <a href="#"><img src="./image/product-7.png" alt="product-7"></a>
                     <div class="text">
-                        <a href="#">BJ41600S</a>
+                        <h4><a href="#">BJ41600S</a></h4>
                         <span class="price">NTD3,490</span>
                     </div>
                     <div class="color">
@@ -53,7 +60,7 @@
                 <li class="card">
                     <a href="#"><img src="./image/product-8.png" alt="product-8"></a>
                     <div class="text">
-                        <a href="#">BJ41600S</a>
+                        <h4><a href="#">BJ41600S</a></h4>
                         <span class="price">NTD3,490</span>
                     </div>
                     <div class="color">
@@ -64,7 +71,7 @@
                 <li class="card">
                     <a href="#"><img src="./image/product-9.png" alt="product-9"></a>
                     <div class="text">
-                        <a href="#">BJ41600S</a>
+                        <h4><a href="#">BJ41600S</a></h4>
                         <span class="price">NTD3,490</span>
                     </div>
                     <div class="color">
@@ -75,7 +82,7 @@
                 <li class="card">
                     <a href="#"><img src="./image/product-10.png" alt="product-10"></a>
                     <div class="text">
-                        <a href="#">BJ41600S</a>
+                        <h4><a href="#">BJ41600S</a></h4>
                         <span class="price">NTD3,490</span>
                     </div>
                     <div class="color">
@@ -86,7 +93,7 @@
                 <li class="card">
                     <a href="#"><img src="./image/product-11.png" alt="product-11"></a>
                     <div class="text">
-                        <a href="#">BJ41600S</a>
+                        <h4><a href="#">BJ41600S</a></h4>
                         <span class="price">NTD3,490</span>
                     </div>
                     <div class="color">
@@ -97,7 +104,7 @@
                 <li class="card">
                     <a href="#"><img src="./image/product-12.png" alt="product-12"></a>
                     <div class="text">
-                        <a href="#">BJ41600S</a>
+                        <h4><a href="#">BJ41600S</a></h4>
                         <span class="price">NTD3,490</span>
                     </div>
                     <div class="color">
