--- a/sunglasses.html
+++ b/sunglasses.html
@@ -118,7 +118,7 @@
 
 <div class="page container">
     <a href="#">上一頁</a>
-    <a href="#">1</a>
+    <a href="#" class="page1">1</a>
     <a href="#">2</a>
     <a href="#">3</a>
     <a href="#">4</a>
